@@ -2427,12 +2427,54 @@ literal|false
 decl_stmt|;
 try|try
 block|{
-name|init
-argument_list|(
+name|MapWritable
+name|w
+init|=
+literal|null
+decl_stmt|;
+while|while
+condition|(
+operator|!
+name|stopRequested
+operator|.
+name|get
+argument_list|()
+condition|)
+block|{
+name|w
+operator|=
 name|reportForDuty
 argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|w
+operator|!=
+literal|null
+condition|)
+block|{
+name|init
+argument_list|(
+name|w
 argument_list|)
 expr_stmt|;
+break|break;
+block|}
+name|sleeper
+operator|.
+name|sleep
+argument_list|()
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"No response from master on reportForDuty. Sleeping and "
+operator|+
+literal|"then trying again."
+argument_list|)
+expr_stmt|;
+block|}
 name|long
 name|lastMsg
 init|=
